--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png+xml" href="src/assets/images/Tisa.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=2.0" />
     <title>Tisa</title>
     <!-- Include Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Aladin&family=Dosis:wght@400;500;600&family=Inria+Sans:ital,wght@0,400;0,500;1,400;1,500&family=Inter:wght@400;500;600&family=Junge&display=swap" rel="stylesheet">
